[project]
name = "run_weeklychallenge"
version = "1.0.6"
authors = [
  { name="Yitzchak Scott-Thoennes", email="yitzchakscottthoennes@gmail.com" },
]
description = "Facilitates running a solution to https://theweeklychallenge.org using one or more sets of inputs provided as JSON command line arguments."

readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ysth/runweeklychallenge-py"
Issues = "https://github.com/ysth/runweeklychallenge-py/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
